# paper-auth-haskell

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  hie-exe.yaml  hie-test.yaml  hie.yaml  makefile.cfg  paper-auth.cabal  paper-auth.cabal.raw  paper.cabal
app/: Main.hs
c++/: Makefile
c++/include/: file.hpp  one_shot.h  thread_safe_map.h  util.h
c++/include/ghc/: ghcautoconf.h  ghcversion.h
c++/include/ghc/stg/: MiscClosures.h
c++/include/grpc/: oauth2_client_socket.grpc.pb.h  oauth2_client_socket.pb.h
c++/src/: cla.cc  greeter_server.cc  oauth2_client_socket_client.cc  oauth2_client_socket_server.cc  util.cc
c++/src/grpc/: oauth2_client_socket.grpc.pb.cc  oauth2_client_socket.pb.cc
definitions/enum/: authenticationType.enum  socketType.enum
definitions/jwt/: issueJWTReqDTO.dto  issueJWTResDTO.dto  refreshJWTResDTO.dto
definitions/oauth2/client/grpc/: issueJWTResDTO.dto
definitions/user/: enrollReqDTO.dto  enrollResDTO.dto  getUserInfoResDTO.dto  patchUserInfoReqDTO.dto  patchUserInfoResDTO.dto  verifyCheckReqDTO.dto
definitions/verification/: phoneNumberSecretWrongDTO.dto  verifyCheckReqDTO.dto  verifyCheckResDTO.dto  verifyRequestReqDTO.dto
docs/: index.adoc  jwt.adoc  user.adoc  verification.adoc
protos/: Makefile  oauth2_client_socket.proto
resources/: application-sample.cfg
resources/static/: enroll.html  index.html  login.html
resources/static/docs/css/: asciidoctor-index.css  tester.css
resources/static/docs/js/: h3-toggle.js  pop-up.js  tester.js  toc.js
sh/: install_grpc.sh
src/: Authentication.hs  CORS.hs  CallStack.hs  Configurator.hs  Context.hs  DB.hs  Definition.hs  Enum.hs  Exception.hs  GlobalError.hs  GlobalMonad.hs  Import.hs  Lib.hs  MIME.hs  NestedMonad.hs  PaperApp.hs  PaperError.hs  PaperMonad.hs  Util.hs
src/JWT/: AuthCheck.hs  Controller.hs  DTO.hs  Entity.hs  ExService.hs  Model.hs  Repository.hs  Service.hs  Util.hs
src/Lock/: Entity.hs  Repository.hs
src/Middleware/: CORS.hs  Utf8.hs
src/Monad/: ErrorT.hs  ProfileT.hs
src/OAuth2/Client/: Controller.hs  DTO.hs  Entity.hs  ExService.hs  HTML.hs  Model.hs  Repository.hs  Service.hs  Util.hs
src/OAuth2/Client/GRpc/: Controller.hs  DTO.hs  ExService.hs
src/OAuth2/Client/ThirdParties/Kakao/: ExService.hs
src/OAuth2/Client/ThirdParties/Naver/: ExService.hs
src/Profile/: Dev.hs  Prod.hs  Test.hs
src/Profile/Test/: Import.hs  Snippet.hs
src/Role/: Entity.hs  Repository.hs
src/SMS/: ExService.hs  Profile.hs  Service.hs
src/SMS/Profile/: NaverCloud.hs  None.hs
src/ThirdParties/NaverCloud/: ExService.hs  Service.hs
src/User/: Controller.hs  DTO.hs  Entity.hs  ExService.hs  Model.hs  Repository.hs  Service.hs
src/UserRole/: Entity.hs
src/Verification/: Controller.hs  DTO.hs  Entity.hs  ExDTO.hs  ExService.hs  Repository.hs  Service.hs  Util.hs
templates/html5/: document-raw.html.slim
test/: Spec.hs
test/Profile/: Test.hs
test/Profile/Test/: Import.hs  Snippet.hs
test/Test/: JWT.hs  User.hs  Verification.hs
