cabal-version:      3.4
name:               paper-auth
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             kwonryul
maintainer:         pkr08205@gmail.com
-- copyright:
category:           Web
build-type:         Simple
data-files:
    resources/static/*.html
    resources/images/*.ico
    resources/*.cfg
    resources/tls/cert.pem
    resources/tls/secret-key.pem
    resources/jwt/paper-auth.pem
    resources/jwt/paper-auth.pub
extra-doc-files:
    CHANGELOG.md
-- extra-source-files:

source-repository head
    type: git
    location: https://github.com/kwonryul/paper-auth

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Lib
      , Profile.Prod
    other-modules:
        Paths_paper_auth
      , JWT.Controller
      , JWT.DTO
      , JWT.Entity
      , JWT.Model
      , JWT.Repository
      , JWT.Service
      , JWT.Util
      , Monad.ErrorT
      , Monad.ProfileT
      , Role.Entity
      , Role.Repository
      , User.Controller
      , User.DTO
      , User.Entity
      , User.Repository
      , User.Service
      , UserRole.Entity
      , Verification.DTO
      , Verification.Entity
      , Verification.Repository
      , Verification.Service
      , Verification.Util
      , Authentication
      , CallStack
      , Configurator
      , Context
      , DB
      , GlobalMonad
      , Import
      , PaperApp
      , PaperMonad
    -- other-extensions:
    autogen-modules:
        Paths_paper_auth
    build-depends:
        base ^>=4.19.0.0
      , template-haskell
      , raw-strings-qq
      , random
      , containers
      , vector
      , bytestring
      , text
      , time
      , bcrypt
      , regex-tdfa
      , exceptions
      , transformers
      , mtl
      , monad-logger
      , unliftio
      , unliftio-core
      , http-types
      , configurator
      , aeson
      , cookie
      , jwt
      , servant
      , servant-server
      , servant-static-th
      , servant-auth-server
      , wai
      , wai-cors
      , warp
      , warp-tls
      , http-types
      , persistent
      , persistent-template
      , persistent-typed-db
      , persistent-mysql
    hs-source-dirs:   src
    default-language: GHC2021

executable paper-auth-exe
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Paths_paper_auth
    -- other-extensions:
    autogen-modules:
        Paths_paper_auth
    build-depends:
        base ^>=4.19.0.0
      , paper-auth

    hs-source-dirs:   app
    default-language: GHC2021

test-suite paper-auth-test
    import:           warnings
    default-language: GHC2021
    other-modules:
        Paths_paper_auth
      , Lib
      , Profile.Prod
      , JWT.Controller
      , JWT.DTO
      , JWT.Entity
      , JWT.Model
      , JWT.Repository
      , JWT.Service
      , JWT.Util
      , Monad.ErrorT
      , Monad.ProfileT
      , Role.Entity
      , Role.Repository
      , User.Controller
      , User.DTO
      , User.Entity
      , User.Repository
      , User.Service
      , UserRole.Entity
      , Verification.DTO
      , Verification.Entity
      , Verification.Repository
      , Verification.Service
      , Verification.Util
      , Authentication
      , CallStack
      , Configurator
      , Context
      , DB
      , GlobalMonad
      , Import
      , PaperApp
      , PaperMonad
    -- other-extensions:
    autogen-modules:
        Paths_paper_auth
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, src
    main-is:          Spec.hs
    build-depends:
        base ^>=4.19.0.0
      , template-haskell
      , raw-strings-qq
      , random
      , containers
      , vector
      , bytestring
      , text
      , time
      , bcrypt
      , regex-tdfa
      , exceptions
      , transformers
      , mtl
      , monad-logger
      , unliftio
      , unliftio-core
      , http-types
      , configurator
      , aeson
      , cookie
      , jwt
      , servant
      , servant-server
      , servant-static-th
      , servant-auth-server
      , wai
      , wai-cors
      , warp
      , warp-tls
      , http-types
      , persistent
      , persistent-template
      , persistent-typed-db
      , persistent-mysql
      , hspec
      , hspec-wai
      , hspec-wai-json