cabal-version:      3.4
name:               paper-auth
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             kwonryul
maintainer:         pkr08205@gmail.com
-- copyright:
category:           Web
build-type:         Custom

extra-doc-files:
    CHANGELOG.md
-- extra-source-files:

custom-setup
  setup-depends:
        base ^>=4.19.0.0
      , Cabal

source-repository head
    type: git
    location: https://github.com/kwonryul/paper-auth

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        JWT.Controller
      , JWT.DTO
      , Profile.Test.Import
      , Profile.Test.Snippet
      , Profile.Prod
      , Profile.Test
      , User.Controller
      , User.DTO
      , Verification.DTO
      , Authentication
      , Import
      , Lib
      , MIME
    other-modules:
        Paths_paper_auth
      , JWT.Entity
      , JWT.Model
      , JWT.Repository
      , JWT.Service
      , JWT.Util
      , Monad.ErrorT
      , Monad.ProfileT
      , Role.Entity
      , Role.Repository
      , SMS.Profile.NaverCloud
      , SMS.Profile.None
      , SMS.Profile
      , SMS.Service
      , ThirdParties.NaverCloud.Service
      , User.Entity
      , User.Repository
      , User.Service
      , UserRole.Entity
      , Verification.Entity
      , Verification.Repository
      , Verification.Service
      , Verification.Util
      , CallStack
      , Configurator
      , Context
      , DB
      , Definition
      , GlobalMonad
      , PaperApp
      , PaperMonad
      , Util
    -- other-extensions:
    autogen-modules:
        Paths_paper_auth
    build-depends:
        base ^>=4.19.0.0
      , tls == 1.9.0
      , template-haskell
      , raw-strings-qq
      , directory
      , filepath
      , random
      , containers
      , vector
      , bytestring
      , text
      , case-insensitive
      , time
      , memory
      , bcrypt
      , cryptonite
      , regex-tdfa
      , exceptions
      , transformers
      , mtl
      , monad-logger
      , unliftio
      , unliftio-core
      , http-types
      , http-media
      , http-client
      , http-client-tls
      , network-uri
      , configurator
      , aeson
      , aeson-pretty
      , cookie
      , jwt
      , servant
      , servant-server
      , servant-client-core
      , servant-client
      , servant-static-th
      , servant-auth-server
      , wai
      , wai-cors
      , warp
      , warp-tls
      , http-types
      , persistent
      , persistent-template
      , persistent-typed-db
      , persistent-mysql
    hs-source-dirs:   src
    default-language: GHC2021

executable paper-auth-exe
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Paths_paper_auth
    -- other-extensions:
    autogen-modules:
        Paths_paper_auth
    build-depends:
        base ^>=4.19.0.0
      , paper-auth
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options: -threaded

test-suite paper-auth-test
    import:           warnings
    default-language: GHC2021
    other-modules:
        Paths_paper_auth
      , Test.JWT
      , Test.User
    -- other-extensions:
    autogen-modules:
        Paths_paper_auth
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.19.0.0
      , paper-auth
      , bytestring
      , text
      , http-client
      , http-client-tls
      , cookie
      , servant
      , servant-server
      , servant-client-core
      , servant-client
      , warp
      , hspec
      , hspec-wai
      , hspec-wai-json
    ghc-options: -threaded